Bug 484699 - Missing button tooltips in animation curves docker
Summary: Missing button tooltips in animation curves docker
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.2.2
Platform: Appimage Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-29 09:07 UTC by Krzysztof Jajeśnica
Modified: 2024-04-08 12:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot with buttons missing a tooltip highlighted in red (91.56 KB, image/png)
2024-03-29 09:07 UTC, Krzysztof Jajeśnica
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Krzysztof Jajeśnica 2024-03-29 09:07:00 UTC
Created attachment 167910 [details]
Screenshot with buttons missing a tooltip highlighted in red

SUMMARY

The last two buttons in the left half of animation curves docker (the buttons with a double arrow in a box) don't show any tooltips when hovered with the mouse. It's difficult for users to figure out what these buttons do (especially since these buttons don't have any text either, only an icon).

I have no idea what the names of these buttons are, so I've attached a screenshot showing which buttons I'm talking about.

STEPS TO REPRODUCE
1. Open the animation curves docker.
2. Hover the mouse cursor over any of the last two buttons in the utilities section (the buttons marked in the attached screenshot).

OBSERVED RESULT
No tooltips are shown.

EXPECTED RESULT
A tooltip is shown describing the function of the hovered button.

SOFTWARE/OS VERSIONS
Linux: 6.8.2-arch1-1 (EndeavourOS)
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0 
Qt Version: 6.6.2

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-04-08 10:59:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2111
Comment 2 Dmitry Kazakov 2024-04-08 12:02:54 UTC
Git commit 1ea5ce5a0b73c3fc5b6cca7e7fb79d0fec6f622c by Dmitry Kazakov, on behalf of Agata Cacko.
Committed on 08/04/2024 at 12:02.
Pushed by dkazakov into branch 'master'.

Add missing tooltips to Anim Curves docker widgets

Before this commit, some of the widgets in the Animation Curves
docker didn't have tooltips. Some of them were difficult to understand
just based on the icon. This commit adds the tooltips to make the
purpose of those widgets more clear.

M  +3    -0    plugins/dockers/animation/KisAnimCurvesDocker.cpp

https://invent.kde.org/graphics/krita/-/commit/1ea5ce5a0b73c3fc5b6cca7e7fb79d0fec6f622c