Add missing tooltips to Anim Curves docker widgets

Before this commit, some of the widgets in the Animation Curves
docker didn't have tooltips. Some of them were difficult to understand
just based on the icon. This commit adds the tooltips to make the
purpose of those widgets more clear.

BUG:484699